# jin

./: .coveragerc  .env.example  .gitignore  AGENTS.md  Cargo.toml  KNOWN_GAPS.md  MVP.md  MVP_BACKLOG.md  Makefile  README.md  build.rs  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  real_app.py  tsconfig.json
.githooks/: pre-push
.github/workflows/: ci.yml  docs-pages.yml  e2e.yml  install-smoke.yml  os-smoke.yml  publish.yml  rust-coverage.yml
docs/: api-v2-migration.md  architecture.md  changelog.md  cli.md  configuration.md  data-contract.md  example-app.md  getting-started.md  go_no_go_scoreboard.md  incidents.md  index.md  operations-guide.md  operator-guide.md  release.md  vision.md
docs/qa/: antigravity-po-runbook.md
examples/: demo_metrics.py
examples/fastapi_demo/: README.md  app.py  seed_app_db.py
frontend/: tsconfig.json
frontend/src/: dashboard.css
frontend/src/dashboard/: api.ts  charts.ts  core.ts  dom.ts  globals.d.ts  render.ts  reports.ts  runtime.ts  types.ts
python/jin/: __init__.py  auth_utils.py  branding.py  cli.py  cli_support.py  config.py  dashboard.py  dashboard_markup.py  logger.py  metrics.py  middleware.py  notifications.py  router.py  scheduler.py  technical_metadata.py  templates.py  testing.py  time_mapping.py  uploader.py  watch.py
python/jin/core/: license.py
python/jin_core/: __init__.py
scratch/: check_metadata.py  generate_test_data.py  reproduce_error.py  test_data_generator.py
scripts/: build_dashboard_assets.py  generate_jin_auth.py  install_pre_push_hook.sh  prepush_sandbox_smoke.sh  release.py  reseed_demo.py  retag_release.py  run_demo.py  sandbox_fastapi_jin_smoke.py  set_branch_protection.sh  smoke_install_matrix.sh
src/: lib.rs  tests.rs
src/core/: commands.rs  engine.rs  grain.rs  json.rs  mod.rs  storage.rs  types.rs
tests/: conftest.py  test_auth_cli.py  test_cli_commands.py  test_config.py  test_coverage_phase2.py  test_coverage_phase3.py  test_coverage_phase4.py  test_coverage_phase5.py  test_disable_native_python_schema.py  test_license.py  test_new_features.py  test_notifications.py  test_packaging_metadata.py  test_promotion.py  test_router_mount_on_add_middleware.py  test_runtime.py  test_templates.py  test_testing_helper.py  test_time_field_promoted_to_dimension.py  test_time_mapping.py  test_upload.py  test_upload_backfill_leaf_columns.py  test_upload_expected_field_aliases.py  test_upload_extra_columns_ignored.py  test_upload_group_column.py  test_upload_preview_regression.py  test_upload_time_promotion_prefers_api_field.py  test_upload_tolerance_header.py  test_windows_duckdb_lock_retry.py
tests/e2e/: dashboard-logout.spec.ts  dashboard-no-baseline.spec.ts  dashboard-po-pages.spec.ts  dashboard-upload-analysis-expandable.spec.ts  dashboard-upload-history.spec.ts  manual-po-ux-flow.spec.ts  mvp-owner-business-views.spec.ts  zz-dashboard-core-workflow.spec.ts  zzz-mvp-acceptance.spec.ts  zzzz-dashboard-auth-bootstrap.spec.ts  zzzz-po-manual-agent.spec.ts
