[package]
name = "jin"
version = "0.1.0"
edition = "2021"

[features]
default = ["duckdb-bundled"]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py39"]
duckdb-bundled = ["duckdb/bundled"]

[lib]
name = "jin_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "=0.21.2" }
# Keep development builds self-contained via our `duckdb-bundled` feature.
# Linux release wheels intentionally compile DuckDB from source inside a manylinux container.
# Downloaded/prebuilt libduckdb binaries are not guaranteed to be manylinux compliant and can
# fail auditwheel checks due to GLIBC/GLIBCXX symbol/version constraints.
duckdb = { version = "=1.10500.0", features = ["serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
