[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jin-monitor"
version = "0.1.0"
description = "Rust-first data quality monitoring middleware for FastAPI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.100",
  "pydantic>=2.0",
  "duckdb>=0.10",
  "apscheduler>=3.10",
  "openpyxl>=3.1",
  "python-multipart>=0.0.9",
  "anyio[trio]",
]

[project.scripts]
jin = "jin.cli:main"

[project.optional-dependencies]
dev = [
  "coverage>=7.0",
  "maturin>=1.0,<2.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "uvicorn>=0.30",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
python-packages = ["jin", "jin_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
extraPaths = ["python"]
