[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "jin-monitor"
version = "1.1.1"
description = "Rust-first data quality monitoring middleware for FastAPI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.100",
  "pydantic>=2.0",
  "duckdb>=0.10",
  "apscheduler>=3.10",
  "openpyxl>=3.1",
  "python-multipart>=0.0.9",
  "anyio",
]

[project.scripts]
jin = "jin.cli:main"

[project.optional-dependencies]
dev = [
  "coverage>=7.0",
  "maturin>=1.6,<2.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "uvicorn>=0.30",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[tool.maturin]
bindings = "pyo3"
features = ["extension-module"]
python-source = "python"
module-name = "jin_core.jin_core"
python-packages = ["jin", "jin_core"]
# Keep sdists self-contained for downstream build environments.
sdist-include = [
  "python/**",
  "src/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
  "build.rs",
  "frontend/**",
  "package.json",
  "package-lock.json",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
extraPaths = ["python"]
